# windows-service-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml
.github/workflows/: audit.yml  build-and-test.yml  style.yml
examples/: enum_services.rs  install_service.rs  notify_service.rs  pause_continue.rs  ping_service.rs  service_config.rs  service_failure_actions.rs  uninstall_service.rs
src/: double_nul_terminated.rs  error.rs  lib.rs  sc_handle.rs  service.rs  service_control_handler.rs  service_dispatcher.rs  service_enum.rs  service_manager.rs  shell_escape.rs  winsvc_vendored.rs
src/scm/: data.rs  double_nul_terminated.rs  flags.rs  mod.rs  mod_temp.rs  service_flags.rs  service_manager_flags.rs  service_manager_temp.rs  service_temp.rs  shell_escape.rs  utils.rs
