[package]
name = "windows-service"
version = "0.5.0"
description = "A crate that provides facilities for management and implementation of windows services"
readme = "README.md"
authors = ["Mullvad VPN"]
keywords = ["windows", "service", "daemon"]
categories = ["api-bindings", "os::windows-apis"]
repository = "https://github.com/mullvad/windows-service-rs"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[features]
default = ["scm"]
scm = [
    "windows-sys/Win32_Security",
    "windows-sys/Win32_Storage_FileSystem",
    "windows-sys/Win32_System_WindowsProgramming"
]

[target.'cfg(windows)'.dependencies]
bitflags = "1.3"
widestring = "1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]
