[package]
name = "windows-service"
version = "0.7.0"
description = "A crate that provides facilities for management and implementation of windows services"
readme = "README.md"
authors = ["Mullvad VPN"]
keywords = ["windows", "service", "daemon"]
categories = ["api-bindings", "os::windows-apis"]
repository = "https://github.com/mullvad/windows-service-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
# Keep in sync with CI job in `build-and-test.yml`
rust-version = "1.58.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dependencies]
bitflags = "2.3"
widestring = "1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]
